manifest/shopify-internship-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: 2018-09-18T21:02:18Z
  labels:
    app: shopify-internship
  name: shopify-internship-deployment
  namespace: default
  resourceVersion: "140580"
  selfLink: /api/v1/namespaces/default/services/shopify-internship-deployment
  uid: 20baf084-bb86-11e8-aa60-42010a960078
spec:
  clusterIP: 10.35.245.30
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 31767
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: shopify-internship
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 35.230.179.136
