manifest/shopify-internship-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: 35.194.95.195
spec:
  backend:
    serviceName: api-service
    servicePort: 8080
